--- a/DarockBili-Watch-App-Info.plist
+++ b/DarockBili-Watch-App-Info.plist
@@ -9,5 +9,9 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+	</array>
 </dict>
 </plist>
