--- a/DarockBili.xcodeproj/xcshareddata/xcschemes/DarockBili Watch App.xcscheme
+++ b/DarockBili.xcodeproj/xcshareddata/xcschemes/DarockBili Watch App.xcscheme
@@ -42,6 +42,30 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "6BA20BC42A7185B100AAD0C7"
+               BuildableName = "DarockBili Watch App Unit Tests.xctest"
+               BlueprintName = "DarockBili Watch App Unit Tests"
+               ReferencedContainer = "container:DarockBili.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "6BA20BD12A7185D300AAD0C7"
+               BuildableName = "DarockBili Watch App UI Tests.xctest"
+               BlueprintName = "DarockBili Watch App UI Tests"
+               ReferencedContainer = "container:DarockBili.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
