Updated some files

--- a/DarockBili.xcodeproj/xcshareddata/xcschemes/DarockBili Watch App.xcscheme
+++ b/DarockBili.xcodeproj/xcshareddata/xcschemes/DarockBili Watch App.xcscheme
@@ -84,8 +84,7 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
-      allowLocationSimulation = "YES"
-      notificationPayloadFile = "PushNotificationPayload.apns">
+      allowLocationSimulation = "YES">
       <PostActions>
          <ExecutionAction
             ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
