--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -115,10 +115,10 @@ jobs:
           name: Watch Testing Log
           path: ./TestBuilding.log
 
-      - name: Upload Downloads Folder
+      - name: Upload DerivedData
         uses: actions/upload-artifact@v3
         with:
-          name: Files in Downloads Folder2
-          path: ~/Downloads
+          name: DerivedData
+          path: ./Caches/DerivedData
 
   
