--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -3,8 +3,12 @@ name: Meowbili iDevice Workflow
 on:
   push:
     branches: [ "main" ]
+    paths-ignore:
+      - '.github/workflows/codeql.yml'
   pull_request:
     branches: [ "main" ]
+    paths-ignore:
+      - '.github/workflows/codeql.yml'
 
 jobs:
   build:
